Fixing database.yml.example, adding seeds file

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -5,7 +5,7 @@ development:
   password: s3cre7
   host: localhost
 
-development:
+test:
   adapter: mysql2
   database: dynamic_dns_test
   username: root
