--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,6 +1,7 @@
 development:
   adapter: mysql2
   database: dynamic_dns
+  encoding: utf8mb4
   username: root
   password: s3cre7
   host: localhost
@@ -8,6 +9,7 @@ development:
 test:
   adapter: mysql2
   database: dynamic_dns_test
+  encoding: utf8mb4
   username: root
   password: testing
   host: localhost
@@ -15,6 +17,7 @@ test:
 production:
   adapter: mysql2
   database: dynamic_dns
+  encoding: utf8mb4
   username: root
   password: sup3rs3cre7
   host: localhost
